--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -152,15 +152,6 @@ jobs:
       - name: Build Docker
         run: make docker
 
-      - name: Export Image to Tar
-        run: docker save -o image.tar aliyun/loongcollector:0.0.1
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: loongcollector-image
-          path: image.tar
-
   # 编译并运行C++ UT，同时测试代码覆盖率
   UnitTestCpp:
     runs-on: arc-runner-set-ilogtail
@@ -278,7 +269,7 @@ jobs:
         run: sudo make unittest_pluginmanager 
   
   # 生成E2E测试用例列表
-  GenerateE2ETestCases:
+  GenerateE2ETestCasesList:
     runs-on: ubuntu-latest
     outputs:
       cases: ${{ steps.discover.outputs.cases }}
@@ -310,15 +301,94 @@ jobs:
           cat cases.json
           echo "cases=$json" >> $GITHUB_OUTPUT
 
+  GenerateE2ETestImage:
+    runs-on: arc-runner-set-ilogtail
+    timeout-minutes: 60
+    permissions:
+      packages: write
+    jobs:
+      - name: prepare ubuntu environment
+        run: |
+          sudo bash -c 'cat > /etc/apt/sources.list << EOL
+          deb https://mirrors.aliyun.com/ubuntu/ jammy main restricted universe multiverse
+          deb-src https://mirrors.aliyun.com/ubuntu/ jammy main restricted universe multiverse
+
+          deb https://mirrors.aliyun.com/ubuntu/ jammy-security main restricted universe multiverse
+          deb-src https://mirrors.aliyun.com/ubuntu/ jammy-security main restricted universe multiverse
+
+          deb https://mirrors.aliyun.com/ubuntu/ jammy-updates main restricted universe multiverse
+          deb-src https://mirrors.aliyun.com/ubuntu/ jammy-updates main restricted universe multiverse
+
+          # deb https://mirrors.aliyun.com/ubuntu/ jammy-proposed main restricted universe multiverse
+          # deb-src https://mirrors.aliyun.com/ubuntu/ jammy-proposed main restricted universe multiverse
+
+          deb https://mirrors.aliyun.com/ubuntu/ jammy-backports main restricted universe multiverse
+          deb-src https://mirrors.aliyun.com/ubuntu/ jammy-backports main restricted universe multiverse
+          EOL'
+          sudo apt update
+          sudo apt-get clean && sudo apt-get update && sudo apt-get install -y libsystemd-dev build-essential git curl bc
+
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo -E apt-get -qq autoremove --purge
+          sudo -E apt-get -qq clean
+
+      - name: Check disk space
+        run: |
+          df -hT $PWD
+
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.19
+
+      - name: Check out code
+        uses: actions/checkout@v4
+        with:
+          submodules: false
+      
+      - name: Set custom submodule URL and fetch
+        run: |
+          SUBMODULE_PATH="core/_thirdparty/coolbpf"
+          git config submodule.$SUBMODULE_PATH.url "https://github.com/iLogtail/coolbpf-mirror.git"
+          git submodule update --init
+          cd $SUBMODULE_PATH
+          echo "Current commit: $(git rev-parse HEAD)"
+
+      - name: Build Image
+        env:
+          BUILD_LOGTAIL_UT: OFF
+          ENABLE_COMPATIBLE_MODE: ON
+          ENABLE_STATIC_LINK_CRT: ON
+          WITHOUTGDB: ON
+          MAKE_JOBS: 24
+          WITHSPL: ON
+        run: |
+          make gocdocker
+          make e2edocker
+
+      - name: Export Image to Tar
+        run: docker save -o image.tar aliyun/loongcollector:0.0.1
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: loongcollector-image
+          path: image.tar
+
   # E2E测试
   E2E:
     runs-on: ubuntu-latest
     needs: 
-      - Build
-      - GenerateE2ETestCases
+      - GenerateE2ETestCasesList
+      - GenerateE2ETestImage
     strategy:
       matrix:
-        test_case: ${{ fromJson(needs.GenerateE2ETestCases.outputs.cases) }}
+        test_case: ${{ fromJson(needs.GenerateE2ETestCasesList.outputs.cases) }}
     timeout-minutes: 60
     steps:
       - name: Set up Go 1.19
@@ -330,14 +400,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: false
-
-      - name: Set custom submodule URL and fetch
-        run: |
-          SUBMODULE_PATH="core/_thirdparty/coolbpf"
-          git config submodule.$SUBMODULE_PATH.url "https://github.com/iLogtail/coolbpf-mirror.git"
-          git submodule update --init
-          cd $SUBMODULE_PATH
-          echo "Current commit: $(git rev-parse HEAD)"
 
       - name: Update Docker-compose to v2
         run: |
@@ -356,7 +418,6 @@ jobs:
         env:
           TEST_CASE: ${{ matrix.test_case }}
         run: |
-          make gocdocker
           ./scripts/e2e.sh e2e
 
   ActionsTimeline:
