--- a/core/unittest/common/CMakeLists.txt
+++ b/core/unittest/common/CMakeLists.txt
@@ -69,6 +69,9 @@ target_link_libraries(network_util_unittest ${UT_BASE_TARGET})
 add_executable(lru_benchmark LRUBenchmark.cpp)
 target_link_libraries(lru_benchmark ${UT_BASE_TARGET})
 
+add_executable(archive_helper_unittest ArchiveHelperUnittest.cpp)
+target_link_libraries(archive_helper_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(common_simple_utils_unittest)
 gtest_discover_tests(common_logfileoperator_unittest)
@@ -86,3 +89,4 @@ gtest_discover_tests(proc_parser_unittest)
 gtest_discover_tests(capability_util_unittest)
 gtest_discover_tests(network_util_unittest)
 gtest_discover_tests(lru_benchmark)
+gtest_discover_tests(archive_helper_unittest)
